try to fix the bug #285